to until the past class

--- a/audioAndVideo/audioVideo.html
+++ b/audioAndVideo/audioVideo.html
@@ -11,7 +11,7 @@
 
 <body>
     <div class="video">
-        <video width="1500px" height="500px" src="../videos/pexels-taryn-elliott-6051209 (2160p).mp4" id="video"></video>
+        <video width="1500px" height="500px" src="videos/pexels-taryn-elliott-6051209 (2160p).mp4" id="video"></video>
     </div>
     <div class="audio">
         <audio src="" id="audio"></audio>
